--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Harry Potter Trivia Game</title>
 </head>
+
 <body>
-    <h1>Harry Potter Trivia!</h1>
+    <div class="container">
+        <div class="row">
+            <h1>Harry Potter Trivia!</h1>
+        </div>
+        <div class="row">
+            <div>Time Remaining:
+                <a id="time">30</a> Seconds.</div>
+        </div>
+
+    </div>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
