--- a/index.html
+++ b/index.html
@@ -21,32 +21,32 @@
                 <div class="col-sm-12 col-md-12 text-center">Time Remaining:
                     <a id="time-counter">30</a> Seconds.</div>
             </div>
-            <div class="row start-button ">
-
-                <button class="col-sm-12 col-md-12 text-center">Quidditch!</button>
-
-
+            <div class="row">
+                <div class="col-sm-12 col-md-12 text-center">
+                    <button class="start-button">Quidditch!</button>
+                </div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center mb-4">Question - what is the content content content</div>
+                <div class="col-sm-12 col-md-12 text-center question mb-4">Question - what is the content content content</div>
             </div>
             <div class="row mt-4 game-section">
-                <div class="col-sm-12 col-md-12 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer text-center pb-4">Answer answer content content</div>
             </div>
         </div>
 
     </div>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
