objects and function for making objects set up

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 </div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center question mb-4">Question - what is the content content content</div>
+                <div class="col-sm-12 col-md-12 text-center question-text mb-4">Question - what is the content content content</div>
             </div>
             <div class="row mt-4 game-section">
-                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer-text1 text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer-text2 text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer-text3 text-center">Answer answer content content</div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer text-center pb-4">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 answer-text4 text-center pb-4">Answer answer content content</div>
             </div>
         </div>
 
