--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                 <div class="col-sm-12 col-md-12 text-center question-text mb-4">Question - what is the content content content</div>
             </div>
             <div class="row mt-4 game-section">
-                <div class="col-sm-12 col-md-12 answer-text1 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text1 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer-text2 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text2 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer-text3 text-center">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text3 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 answer-text4 text-center pb-4">Answer answer content content</div>
+                <div class="col-sm-12 col-md-12 text-center pb-4"><button class="answer-button answer-text4 mb-4"></button></div>
             </div>
         </div>
 
