a lot of progress done for tonight

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="main-content">
             <div class="row game-section">
                 <div class="col-sm-12 col-md-12 text-center">Time Remaining:
-                    <a id="time-counter">30</a> Seconds.</div>
+                    <a id="time-counter">15</a> Seconds.</div>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-12 text-center">
@@ -29,17 +29,26 @@
             <div class="row game-section">
                 <div class="col-sm-12 col-md-12 text-center question-text mb-4">Question - what is the content content content</div>
             </div>
+            <div class="row game-section">
+                <div class="col-sm-12 col-md-12 text-center right-or-wrong mb-4"></div>
+            </div>
             <div class="row mt-4 game-section">
-                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text1 mb-4"></button></div>
+                <div class="col-sm-12 col-md-12 text-center"><button id='answer1' value="" class="answer-button answer-text1 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text2 mb-4"></button></div>
+                <div class="col-sm-12 col-md-12 text-center"><button value="" class="answer-button answer-text2 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center"><button class="answer-button answer-text3 mb-4"></button></div>
+                <div class="col-sm-12 col-md-12 text-center"><button value="" class="answer-button answer-text3 mb-4"></button></div>
             </div>
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center pb-4"><button class="answer-button answer-text4 mb-4"></button></div>
+                <div class="col-sm-12 col-md-12 text-center pb-4"><button value="" class="answer-button answer-text4 mb-4"></button></div>
+            </div>
+            <div class="row game-section " >
+                <div class="col-sm-12 col-md-12 text-center">
+                    <img class=" gif-area pb-4" ></img>
+                </div>
+                
             </div>
         </div>
 
