just need to do reset button

--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
         </div>
         <div class="main-content">
             <div class="row game-section">
-                <div class="col-sm-12 col-md-12 text-center">Time Remaining:
+                <div class="col-sm-12 col-md-12 time-remaining text-center">Time Remaining:
                     <a id="time-counter">15</a> Seconds.</div>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-12 text-center">
                     <button class="start-button">Quidditch!</button>
                 </div>
+                <div class="col-sm-12 col-md-12 text-center">
+                    <button class="reset-button mb-4">Riddikulus</button>
+                </div>
+            </div>
+            <div class="row game-section">
+                <div class="col-sm-12 col-md-12 correct text-center  mb-4"></div>
+            </div>
+            <div class="row game-section">
+                <div class="col-sm-12 col-md-12 incorrect text-center  mb-4"></div>
+            </div>
+            <div class="row game-section">
+                <div class="col-sm-12 col-md-12 timedout text-center  mb-4"></div>
             </div>
             <div class="row game-section">
                 <div class="col-sm-12 col-md-12 text-center question-text mb-4">Question - what is the content content content</div>
